# babylon-ledger-app

./: .gitignore  Cargo.toml  README.md  build-nanos-plus.sh  build-nanos.sh  build-nanosplus.sh  build-nanox.sh  build-stax.sh  build.rs  build.sh  clippy-nanos-plus.sh  clippy-nanos.sh  clippy-nanox.sh  flash-nanos-plus.sh  flash-nanos.sh  flash-nanosplus.sh  install-nightly.sh  ledger_app.toml  load-nanos.sh  prepare-binaries.sh  run-app-builder.sh  run-dev-tools.sh  run-speculos.sh
.cargo/: config
app-builder/: Dockerfile  README.md  build-image.sh
apps/: speculos-debug-daemon.sh
doc/: apdu.md  api.md  install-on-macos.md  sdk-dependencies.txt  test-vectors-ed25519.txt  test-vectors-secp286k1.txt
ragger_tests/: conftest.py  requirements.txt  setup.cfg  test-nanos-debug.sh  test-nanos.sh  test-nanosp.sh  test-nanosplus.sh  test-nanox.sh  test-physical-device-nanos-debug.sh  test-physical-device-nanosplus.sh  test-physical-device-nanox.sh  test-simulator-nanos-debug.sh  test-simulator-nanos.sh  test-simulator-nanosplus.sh  test-simulator-nanox.sh  test_get_app_version.py  test_get_device_id.py  test_get_device_model.py  test_get_public_key_ed25519.py  test_get_public_key_secp256k1.py  test_navigation.py  test_sign_auth_ed25519.py  test_sign_auth_secp256k1.py  test_sign_preauth_hash_ed25519.py  test_sign_preauth_hash_secp256k1.py  test_sign_preauth_raw_ed25519.py  test_sign_preauth_raw_secp256k1.py  test_sign_tx_ed25519.py  test_sign_tx_secp256k1.py  test_verify_address_ed25519.py  test_verify_address_secp256k1.py
sbor/: Cargo.toml
sbor/src/: debug.rs  decoder_error.rs  display_io.rs  instruction.rs  instruction_extractor.rs  instruction_printer.rs  lib.rs  sbor_decoder.rs  sbor_notifications.rs  si_test_data.rs  si_test_data_gen.rs  static_vec.rs  tx_features.rs  tx_intent_test_data.rs  tx_intent_test_data_gen.rs  type_info.rs
sbor/src/bech32/: address.rs  encoder.rs  hrp.rs  mod.rs  network.rs
sbor/src/digest/: digest.rs  digester.rs  hash_calculator.rs  mod.rs  tx_hash_calculator.rs
sbor/src/math/: bnum_integer.rs  byte_receiver.rs  decimal.rs  math_error.rs  mod.rs  precise_decimal.rs
sbor/src/math/bnum_integer/: convert.rs
sbor/src/print/: access_rule.rs  address.rs  array.rs  custom_types.rs  decimals.rs  enums.rs  fanout.rs  hex.rs  instruction_printer.rs  manifest_value.rs  map.rs  method_key.rs  mod.rs  non_fungible.rs  parameter_printer.rs  primitives.rs  state.rs  tty.rs  tuple.rs  tx_intent_type.rs  tx_printer.rs  tx_summary_detector.rs
sbor/src/utilities/: conversion.rs
simple-bigint/: Cargo.toml
src/: app_error.rs  app_errors.rs  bip32.rs  command.rs  command_class.rs  crypto.rs  handler.rs  io.rs  key25519.rs  ledger_display_io.rs  (+12 more)
(+176 files in other folders)
