[package]
name = "babylon-ledger-app"
version = "0.7.21"
authors = ["siy"]
edition = "2021"
description = "Radix Babylon"

[dependencies]
ledger_device_sdk = { path = "../ledger-device-rust-sdk/ledger_device_sdk" }
ledger_secure_sdk_sys = { path = "../ledger-device-rust-sdk/ledger_secure_sdk_sys" }
include_gif = { path = "../ledger-device-rust-sdk/include_gif" }

sbor = { path = "./sbor", default-features = false }

[dev-dependencies]
blake2 = { version = "0.10.6", default-features = false }

[profile.dev]
opt-level = "s"
lto = false

[profile.release]
opt-level = "s"
lto = false

[package.metadata.ledger]
curve = ["ed25519", "secp256k1"]
flags = "0x040"
path = ["44'/1022'"]
name = "Radix Babylon"
nanos.icon = "icons/nanos_app_radix.gif"
nanox.icon = "icons/nanox_app_radix.gif"
nanosplus.icon = "icons/nanox_app_radix.gif"