[package]
name = "babylon-ledger-app"
version = "0.7.29"
authors = ["siy"]
edition = "2021"
description = "Radix Babylon"

[dependencies]
ledger_device_sdk = "1.18.3"
ledger_secure_sdk_sys = "1.5.2"
include_gif = "1.2.0"

sbor = { path = "./sbor", default-features = false }

[dev-dependencies]
blake2 = { version = "0.10.6", default-features = false }

[profile.dev]
opt-level = "z"
lto = false

[profile.release]
opt-level = "z"
lto = false

[package.metadata.ledger]
curve = ["ed25519", "secp256k1"]
flags = "0x040"
path = ["44'/1022'"]
name = "Radix Babylon"
nanos.icon = "icons/nanos_app_radix.gif"
nanox.icon = "icons/nanox_app_radix.gif"
nanosplus.icon = "icons/nanox_app_radix.gif"
